--- a/evf/EVF4-Substitution.html
+++ b/evf/EVF4-Substitution.html
@@ -34,14 +34,13 @@
           <b><img src="/images/evf4diagram.png" width="960" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p>User can substitution ingredients which they don't want to eat in recipe</p>
+          <p>User can substitute ingredients which they don't want to eat in recipe</p>
           <b><img src="/images/EVF4.png" width="960" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p> The function of this part is to help users replace the ingredients in the recipe. 
-          Because some users may be allergic to certain ingredients or other special circumstances, they can't use certain ingredients. 
-          Therefore, this function can help them replace inedible ingredients. This function can screen out the replaced menu for users to use. </p>
+        <p> The function is to help users replace the ingredients in the recipe. 
+            When users a're short of certain food material, they can choose the material that can be replaced </p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
@@ -49,7 +48,7 @@
           <li>
             <b> Substitution:</b> <br />
 
-            <table data-toggle="table">
+            <table data-toggle="table">are
               <thead>
                 <tr>
                   <th>User story</th>
