--- a/evf/EVF5-Shopping_Helper.html
+++ b/evf/EVF5-Shopping_Helper.html
@@ -43,7 +43,7 @@
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p>This part of the function helps users to make up for the ingredients they lack while viewing the menu, and provides online order delivery service. If users don't need to spend freight, they can also find the nearest market to buy their ingredients through the map function, and the list of ingredients can also be saved to the collection album to facilitate the user's investigation. This feature is designed to provide a shopping helper for users  </p>
+        <p>This function helps users to make up for the ingredients they lack while viewing the menu, and provides online order delivery service. If users don't need to spend freight, they can also find the nearest market to buy their ingredients through the map function, and the list of ingredients can also be saved to the collection album to facilitate the user's investigation. This feature is designed to provide a shopping helper for users  </p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
