--- a/evf/EVF1-Like_and_comment.html
+++ b/evf/EVF1-Like_and_comment.html
@@ -31,11 +31,11 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf1diagram.png" width="960" height="600" alt="" />
+          <b><img src="/images/evf1diagram.png" width="500" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p>User can collection and facourite the recipe and check in their personal center </p>
-          <b><img src="/images/EVF1.png" width="960" height="300" alt="" />
+          <p>User can collect and favourite the recipe and check in profile page </p>
+          <b><img src="/images/EVF1.png" width="600" height="300" alt="" />
         </p>
 
    
@@ -43,12 +43,22 @@
 
           <h2>2.Explanation</h2>
           <h3>2.1 Description</h3>
-          <p style="color: black;">This is an extension to add to recipe details. Users can like and comment on posts they want to contribute or express personal opinion.</p>
+          <p style="color: black;">
+            This is the expansion function of the recipe details.
+            Under the menu description, users can see a heart icon 
+            and a chat bubble icon, with the corresponding number
+            of love and comments next to it.If they love the post,
+            they can click on the like button, it will turn red.
+            If users want to be different, they must click again, 
+            they will return to their original state. Similar to
+            the like function, users can click on the comment 
+            icon to switch the system to comments. Users can add 
+            comments and send them to the public.</p>
+
           <h3>2.2 User story and criteria</h3>
 
-
           <ul>
-
+            
             <li>
               <b> Like and comment: </b> <br />
 
