--- a/evf/EVF2_Health_risk.html
+++ b/evf/EVF2_Health_risk.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>MVF2-Slider</title>
+  <title>EVF2 - Health risk and precaution</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,19 +31,16 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf2diagram.png" width="960" height="600" alt="" />
+          <b><img src="/images/evf2diagram.png" width="500" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p>User can collection and facourite the recipe and check in their personal center </p>
-          <b><img src="/images/EVF2.png" width="960" height="300" alt="" />
+          <b><img src="/images/EVF2.png" width="600" height="300" alt="" />
         </p>
 
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
-      This is a fearture created to inform users about the quality of this recipe. 
-      With this extended feature, the user can know how the food made based on that 
-      recipe will affect the health.
+        This is a function that is added to recipe details as an extended feature. In the bottom left corner of the recipe description you can find nutrition info and the blue text underlined: View info. When the user clicks on it, nutritional information such as fat, calories or protein is displayed as a chat bubble to simplify the UI. When users want to close nutrition info, they just need to press "Hide info" next to the bubble to hide that information.
       </p>
       <h3>2.2 User story and criteria</h3>
 
@@ -69,12 +66,12 @@
                 <td>
                   <p>
                     <br><br>Criterion 0: <br>
-                    <b>Given</b> I im in the main page and I choose a recipe, system switches to the recipe details<br>
+                    <b>Given</b> I am in the main page and I choose a recipe, system switches to the recipe details<br>
                     <b><br>When</b> I click on the “View +” button next to the text “Precaution” <br>
                     <b><br>Then</b> A chat bubble pop up AND user can read through the precaution<br>
 
                     <br><br>Criterion 1: <br>
-                    <b>Given</b> I im in the main page and I choose a recipe, system switches to the recipe details<br>
+                    <b>Given</b> I am in the main page and I choose a recipe, system switches to the recipe details<br>
                     <b><br>When</b> I click on the “Hide -” button next to the text “Precaution” <br>
                     <b><br>Then</b> The precaution disappeares<br>
 
