--- a/evf/EVF4-Substitution.html
+++ b/evf/EVF4-Substitution.html
@@ -31,24 +31,22 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf4diagram.png" width="960" height="600" alt="" />
+          <b><img src="/images/evf4diagram.png" width="300" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
           <p>User can substitute ingredients which they don't want to eat in recipe</p>
-          <b><img src="/images/EVF4.png" width="960" height="300" alt="" />
+          <b><img src="/images/EVF4.png" width="600" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p> The function is to help users replace the ingredients in the recipe. 
-            When users a're short of certain food material, they can choose the material that can be replaced </p>
+        <p> This function is to help users change the ingredients in recipes. When a user lacks certain ingredients, he can choose the ingredients that can be replaced. If there is no chicken at home, then user can use this function to replace chicken with other ingredients.</p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
 
           <li>
             <b> Substitution:</b> <br />
-
-            <table data-toggle="table">are
+            <table data-toggle="table">
               <thead>
                 <tr>
                   <th>User story</th>
@@ -59,18 +57,16 @@
                 <tr>
                   <td>
                     <b>As a</b> user
-                    <p><b>I want</b> to substitution some ingredients in a recipe</p>
-                    <p><b>so that</b> I can avoid eating some ingredients</p>
+                    <p><b>I want</b> to substitute some ingredients in a recipe</p>
+                    <p><b>so that</b> I can avoid to use some ingredients</p>
                   </td>
                   <td>
                     <p>
                       <br><br>Criterion 0: <br>
                       <b>Given</b>
-                      I am a customer
-                      I search a recipe
-                      I am on recipe detail page<br>
-                      <b><br>When</b> I click on the substitution button<br>
-                      <b><br>Then</b> User can substitution some ingredients And get new recipes<br>
+                      I am a customer And I search a recipe And I am on recipe detail page<br>
+                      <b><br>When</b> I click on the "Substitution" button<br>
+                      <b><br>Then</b> Users can substitute the ingredients on the recipe with new ingredients And get new recipes.<br>
                     </p>
                   </td>
                 </tr>
