--- a/evf/EVF5-Shopping_Helper.html
+++ b/evf/EVF5-Shopping_Helper.html
@@ -31,19 +31,15 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf5diagram.png" width="960" height="600" alt="" />
+          <b><img src="/images/evf5diagram.png" width="300" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p> This part of the function helps users to make up for the ingredients they lack while viewing the menu, and 
-            provides online order delivery service. If users don't need to spend freight, they can also find the nearest 
-            market to buy their ingredients through the map function, and the list of ingredients can also be saved to 
-            the collection album to facilitate the user's investigation.This feature is designed to provide a shopping
-            helper for users.</p>
-          <b><img src="/images/EVF5.png" width="960" height="300" alt="" />
+          <p> Users can use the shopping helper to help them buy missing ingredients</p>
+          <b><img src="/images/EVF5.png" width="600" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p>This function helps users to make up for the ingredients they lack while viewing the menu, and provides online order delivery service. If users don't need to spend freight, they can also find the nearest market to buy their ingredients through the map function, and the list of ingredients can also be saved to the collection album to facilitate the user's investigation. This feature is designed to provide a shopping helper for users  </p>
+        <p>This function can help users not only buy missing ingredients when viewing recipes, but also provide online order delivery services. If users do not want to pay the freight, they can also find the nearby market to purchase the food they need through the map function. And the list of ingredients can also be saved to the album, which is convenient for users to view.</p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
@@ -62,20 +58,18 @@
                 <tr>
                   <td>
                     <b>As a</b> user
-                  <p><b>I want</b> to use a shopping helper</p>
-                  <p><b>so that</b> I can buy ingredients easier</p>
+                  <p><b>I want</b> to buy missing ingredients</p>
+                  <p><b>so that</b> I can use the recipe</p>
                   </td>
                   <td>
                     <p>
                       <br><br>Criterion 0: <br>
                       <b>Given</b> 
                       I am a customer
-                      I search a recipe
-                      I am on recipe detail page<br>
-                      <b><br>When</b> I click on the shopping helper button<br>
-                      <b><br>Then</b> User can see ingredients which they need And they can see the
-                      map for nearby market AND they can chose whether use online
-                      pay or not<br>
+                      And I search a recipe
+                      And I am on recipe detail page<br>
+                      <b><br>When</b> I click on the "Shopping helper" button<br>
+                      <b><br>Then</b> Users can see ingredients they need And They can see the nearby market on the map And They can choose whether to use online payment.<br>
                     </p>
                   </td>
                 </tr>
