--- a/evf/EVF3-Collection_favourite.html
+++ b/evf/EVF3-Collection_favourite.html
@@ -31,19 +31,17 @@
         <!-- STUB: done -->
         <p>
           <p><b>Activity diagram: <br></b>
-            <b><img src="/images/evf3diagram.png" width="960" height="600" alt="" />
+            <b><img src="/images/evf3diagram.png" width="200" height="600" alt="" />
           </p>
           <p><b>Mock up diagram: <br></b>
-            <p>User can collection and facourite the recipe and check in profile page </p>
-            <b><img src="/images/EVF3.png" width="960" height="300" alt="" />
-            <b><img src="/images/EVF3.2.png" width="960" height="300" alt="" />
+            <p>User can collect and facourite the recipe and check in profile page </p>
+            <b><img src="/images/EVF3.png" width=" 500" height="300" alt="" />
+            <b><img src="/images/EVF3.2.png" width="500" height="300" alt="" />
           </p>
           <h2>2.Explanation</h2>
           <h3>2.1 Description</h3>
           <p>
-            This function has been implemented in MVF, users can click 
-            the red heart under the menu to collect recipes, and users can quickly 
-            find the recipes they want in profile page. </p>
+            This function has been implemented in MVF. Users can click the heart button to collect recipes under the menu and users can quickly find the recipes they want on the profile page </p>
           <h3>2.2 User story and criteria</h3>
   
           <ul>
@@ -62,17 +60,15 @@
                   <tr>
                     <td>
                       <b>As a</b> user
-                      <p><b>I want</b> to collect and favourite a recipe</p>
-                      <p><b>so that</b> I can find the recipe which I want to use</p>
+                      <p><b>I want</b> to collect a recipe</p>
+                      <p><b>so that</b> I can find my favorite recipe</p>
                     </td>
                     <td>
                       <p>
                         <br><br>Criterion 0: <br>
                         <b>Given</b> I have logged in And view the recipe page<br>
-                        <b><br>When</b> I see the pictures of the recipes 
-                        And next to every recipe picture will have a "Hearth" button 
-                        And I click the "button" section <br>
-                        <b><br>Then</b> I can collect this recipe And add one to its popularity<br>
+                        <b><br>When</b> I see a picture of the recipe And at the bottom of each picture, there is a heart button. I click the button. <br>
+                        <b><br>Then</b> I can collect this recipe and add it to favorite list.<br>
                       </p>
                     </td>
                   </tr>
