--- a/evf/EVF3-Collection_favourite.html
+++ b/evf/EVF3-Collection_favourite.html
@@ -34,14 +34,14 @@
             <b><img src="/images/evf3diagram.png" width="200" height="600" alt="" />
           </p>
           <p><b>Mock up diagram: <br></b>
-            <p>User can collect and facourite the recipe and check in profile page </p>
+            <p>User can collect and favourite the recipe and check in profile page </p>
             <b><img src="/images/EVF3.png" width=" 500" height="300" alt="" />
             <b><img src="/images/EVF3.2.png" width="500" height="300" alt="" />
           </p>
           <h2>2.Explanation</h2>
           <h3>2.1 Description</h3>
           <p>
-            This function has been implemented in MVF. Users can click the heart button to collect recipes under the menu and users can quickly find the recipes they want on the profile page </p>
+            This function has been partially implemented in MVF. Users can click the heart button to collect recipes under the menu and users can quickly find the recipes they want on the profile page </p>
           <h3>2.2 User story and criteria</h3>
   
           <ul>
