--- a/evf/EVF3-Collection_favourite.html
+++ b/evf/EVF3-Collection_favourite.html
@@ -67,8 +67,8 @@
                       <p>
                         <br><br>Criterion 0: <br>
                         <b>Given</b> I have logged in And view the recipe page<br>
-                        <b><br>When</b> I see a picture of the recipe And at the bottom of each picture, there is a heart button. I click the button. <br>
-                        <b><br>Then</b> I can collect this recipe and add it to favorite list.<br>
+                        <b><br>When</b>I want to save the recipe, I click the heart sharped button at the bottom of a recipe card <br>
+                        <b><br>Then</b>I can collect this recipe and add it to favorite list.<br>
                       </p>
                     </td>
                   </tr>
