--- a/evf/EVF5-Shopping_Helper.html
+++ b/evf/EVF5-Shopping_Helper.html
@@ -31,15 +31,17 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf5diagram.png" width="300" height="600" alt="" />
+          <b><img src="/images/evf5diagram.png" width="500" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
           <p> Users can use the shopping helper to help them buy missing ingredients</p>
-          <b><img src="/images/EVF5.png" width="600" height="300" alt="" />
+          <b><img src="/images/evf/gifhelper.gif" width="600" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p>This function can help users not only buy missing ingredients when viewing recipes, but also provide online order delivery services. If users do not want to pay the freight, they can also find the nearby market to purchase the food they need through the map function. And the list of ingredients can also be saved to the album, which is convenient for users to view.</p>
+        <p>This function can help users buy missing ingredients online. The system connects Amazon Fresh which allows
+          customers to purchase ingredients online. And the list of ingredients can also be saved to the album, which is
+          convenient for users to view.</p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
@@ -58,18 +60,18 @@
                 <tr>
                   <td>
                     <b>As a</b> user
-                  <p><b>I want</b> to buy missing ingredients</p>
-                  <p><b>so that</b> I can use the recipe</p>
+                    <p><b>I want</b> to buy missing ingredients</p>
+                    <p><b>so that</b> I can use the recipe</p>
                   </td>
                   <td>
                     <p>
                       <br><br>Criterion 0: <br>
-                      <b>Given</b> 
-                      I am a customer
-                      And I search a recipe
-                      And I am on recipe detail page<br>
+                      <b>Given</b>
+                      I am a customer And I search a recipe And I am on the recipe detail page<br>
                       <b><br>When</b> I click on the "Shopping helper" button<br>
-                      <b><br>Then</b> Users can see ingredients they need And They can see the nearby market on the map And They can choose whether to use online payment.<br>
+                      <b><br>Then</b> Then Users can see ingredients they need And They can see product recommendations
+                      from Amazon Fresh And They can click product links and the system redirects to amazon fresh.
+                      <br>
                     </p>
                   </td>
                 </tr>
