--- a/evf/EVF1-Like_and_comment.html
+++ b/evf/EVF1-Like_and_comment.html
@@ -31,79 +31,76 @@
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf1diagram.png" width="500" height="600" alt="" />
+          <b><img src="/images/evf1diagram.png" width="500"  alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p>User can collect and favourite the recipe and check in profile page </p>
-          <b><img src="/images/EVF1.png" width="600" height="300" alt="" />
+          <p>User can comment </p>
+          <b><img src="/images/evf/comment.png" width="600" alt="" />
+            <p>User can like a recipe </p>
+            <b><img src="/images/evf/giflike.gif" width="600" alt="" />
         </p>
 
-   
-     
 
-          <h2>2.Explanation</h2>
-          <h3>2.1 Description</h3>
-          <p style="color: black;">
-            This is the expansion function of the recipe details.
-            Under the menu description, users can see a heart icon 
-            and a chat bubble icon, with the corresponding number
-            of love and comments next to it.If they love the post,
-            they can click on the like button, it will turn red.
-            If users want to be different, they must click again, 
-            they will return to their original state. Similar to
-            the like function, users can click on the comment 
-            icon to switch the system to comments. Users can add 
-            comments and send them to the public.</p>
 
-          <h3>2.2 User story and criteria</h3>
 
-          <ul>
-            
-            <li>
-              <b> Like and comment: </b> <br />
+        <h2>2.Explanation</h2>
+        <h3>2.1 Description</h3>
+        <p style="color: black;">
+          In this function, the system allows users to click a heart icon to express affection for a recipe. If they
+          love the post, they can click on the like button, the button will turn red. The system can sort recipes by
+          “like” number. Users also are able to leave comments for the recipe and can view comments from other users
+          with their avatars and created time. </p>
 
-              <table data-toggle="table">
-                <thead>
-                  <tr>
-                    <th>User story</th>
+        <h3>2.2 User story and criteria</h3>
 
-                    <th>Acceptance criteria</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><b>As a</b> user,
-                      <b><br>I can/ I want</b> react to my favourite recipe and comment on it
-                      <b><br>so that</b> I can provide my ideas to improve that recipe.</td>
+        <ul>
 
-                    <td>
-                      <p>
-                        <br><br>Criterion 0:
-                        <b><br>Given</b> I im in the main page and I choose a recipe, system switches to the recipe details
-                        <b><br>When</b> I click the "like" button
-                        <b><br>Then</b> “Like” button turns green, I have successfully pressed like
-                        <b><br>When</b> I click the "like" button again
-                        <b><br>Then</b> “Like” button turns blank, I have unlike the recipe
+          <li>
+            <b> Like and comment: </b> <br />
 
-                        <br><br>Criterion 1:
-                        <b><br>Given</b> I im in the main page and I choose a recipe, system switches to the recipe details
-                        <b><br>When</b> I click the comment button (bubble chat symbol)
-                        <b><br>Then</b> The system switch to comment section AND I can post my comments to public
-                        <b><br>When</b> I click "Return to main recipe
-                        <b><br>Then</b> System switches to the main recipe
+            <table data-toggle="table">
+              <thead>
+                <tr>
+                  <th>User story</th>
 
-                      </p>
-                      <p>
+                  <th>Acceptance criteria</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><b>As a</b> user,
+                    <b><br>I want</b> to react to my favourite recipe and comment on it
+                    <b><br>so that</b> I can provide my ideas to improve that recipe.</td>
 
-                      </p>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </li>
+                  <td>
+                    <p>
+                      <br><br>Criterion 0:
+                      <b><br>Given</b>I am on the main page and I choose a recipe, system switches to the recipe details
+                      <b><br>When</b> I click the "like" button
+                      <b><br>Then</b> “Like” button turns green, I have successfully pressed like
+                      <b><br>When</b> I click the "like" button again
+                      <b><br>Then</b> “Like” button turns blank, I have unlike the recipe
 
-            <br />
-            </ol>
+                      <br><br>Criterion 1:
+                      <b><br>Given</b> I am on the main page and I choose a recipe, the system redirects to the recipe
+                      details
+                      <b><br>When</b> I click the comment button (bubble chat symbol)
+                      <b><br>Then</b> The system redircts to comment section AND I can post my comments
+                      <b><br>When</b> I click "Return to main recipe
+                      <b><br>Then</b> the system redircts to the main recipe page
+
+                    </p>
+                    <p>
+
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </li>
+
+          <br />
+          </ol>
     </div>
   </section>
 
