update meeting timetable

--- a/other/team-meeting.html
+++ b/other/team-meeting.html
@@ -49,7 +49,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>8/1 week2</td>
+              <td>1/8 week2</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/874cdeb2-fa06-4203-9936-88ab933b395f"
@@ -69,7 +69,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/12 week4.1</td>
+              <td>12/8 week4.1</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/93e77218-76d2-4cfd-aaaf-d71b69685b53"
@@ -79,7 +79,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/14 week4.2</td>
+              <td>14/8 week4.2</td>
               <td>
                 <a
                   href="
@@ -91,7 +91,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/19 week5</td>
+              <td>19/8 week5</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/951373b4-dc82-4b49-b034-502639679fe0"
@@ -101,7 +101,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/28 week6</td>
+              <td>28/8 week6</td>
               <td>
                 <a
                   href="
@@ -113,7 +113,7 @@
               </td>
             </tr>
             <tr>
-              <td>9/5 mid semester</td>
+              <td>5/9 mid semester</td>
               <td>
                 <a
                   href="
@@ -125,7 +125,7 @@
               </td>
             </tr>
             <tr>
-              <td>9/11 week7</td>
+              <td>11/9 week7</td>
               <td>
                 <a
                   href="
@@ -137,11 +137,44 @@
               </td>
             </tr>
             <tr>
-              <td>9/19 week8</td>
+              <td>19/9 week8</td>
               <td>
                 <a
                   href="
                   https://web.microsoftstream.com/video/e68efa53-537d-4352-a3d8-969d3966f446"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>25/9 week9</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/76607611-9840-4004-82da-34c57a40217d"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>2/10 week10</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/605e8820-a00f-4b6a-b992-cdd187d8bc69"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>9/10 week11</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/faf4f840-3fa1-4f2b-9d3b-d8a9462bbaba"
                 >
                   LINK</a
                 >
