update the git activities

--- a/other/github-activity.html
+++ b/other/github-activity.html
@@ -35,20 +35,20 @@
         </thead>
         <tbody>
           <tr>
-            <td>assignment part 2</td>
+            <td>assignment part 3 - code</td>
             <td>
               <a
-                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/p2?after=9052292b0da1b9c6eed1d6ccc7b2c5987ecf28af+34&branch=p2"
+                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/dev"
               >
                 LINK</a
               >
             </td>
           </tr>
           <tr>
-            <td>invision</td>
+            <td>assignment part 3 - report</td>
             <td>
               <a
-                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/invision?before=6150672b2d017a37ec37706a7f98e1fa4ea0ad42+35&branch=invision"
+                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/p3"
               >
                 LINK</a
               >
@@ -58,17 +58,21 @@
       </table>
 
       <p><H3>Github Screenshots: <br></H3>
-        <b>Branch invision: <br></b>
-        <b><img src="/images/invision_commit_8.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_7.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_6.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_5.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_4.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_3.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_2.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_1.jpg" width="1035" alt="" /></b>
+        <b>Branch dev: <br></b>
+        <b><img src="/images/dev12.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev11.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev10.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev9.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev8.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev7.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev6.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev5.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev4.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev3.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev2.png" width="1035" alt="" /></b>
+        <b><img src="/images/dev1.png" width="1035" alt="" /></b>
         
-        <b>Branch p2: <br></b>
+        <b>Branch p3: <br></b>
         <b><img src="/images/p2_commit_6.jpg" width="1035" alt="" /></b>
         <b><img src="/images/p2_commit_7.jpg" width="1035" alt="" /></b>
         <b><img src="/images/p2_commit_8.jpg" width="1035" alt="" /></b>
